add tag when add header section

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SPS Property Solution | บ้านคอนโดสวย อมตะซิตี้ ชลบุรี</title>
     <meta name="description" content="SPS Property Solution บ้านคอนโดสวย อมตะซิตี้ ชลบุรี - ค้นหาบ้านและคอนโดที่ใช่สำหรับคุณในอมตะซิตี้ ชลบุรี" />
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAl9ePCEt511qqPwH_dOTW09vwhAtkzptI&libraries=places"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=%VITE_GOOGLE_PLACES_API_KEY%&libraries=places"></script>
   </head>
   <body>
     <div id="root"></div>
